--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
 {{ content }}
 			</article>
 		</div></div>
-		<a href="{{repo}}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+		<a href="{{page.repo}}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 		<footer>
 			2016 - Samsung Internet
 		</footer>
